# sync

./: Setup.hs  sync.cabal  sync2.cabal
proto/: sync.proto  sync2.proto
src/: Sync.hs  Sync2.hs
src/Sync/: Exceptions.hs  Hashing.hs  IO.hs  Local.hs  Protocol.hs  Remote.hs  Types.hs
src/Sync/Hashing/: MD5.hs  RollingBlocks.hs
src/Sync/Internal/: Exceptions.hs  IO.hs  Protocol.hs  Types.hs
src/Sync/Local/: Filetransfer.hs  Hashing.hs
src/Sync/Protocol/: Internal.hs
src/Sync/Remote/: Filetransfer.hs  Hashing.hs
src/Sync2/: Exceptions.hs  Hashing.hs  IO.hs  Protocol.hs
src/Sync2/Hashing/: RollingHash.hs
src/Sync2/Protocol/: Internal.hs  VarInt.hs
