Name:                sync
Version:             0.1

Synopsis:            file transfer and synchronisation
Description:         file transfer and synchronisation

License:             BSD3
License-file:        LICENSE
Author:              Nils Schweinsberg <mail@nils.cc>
Maintainer:          mail@nils.cc
-- Copyright:           

Category:            Network

Build-type:          Custom
Cabal-version:       >=1.2

-- Extra-source-files:  

Library

  HS-source-dirs:    src
  GHC-options:       -O2

  Build-depends:       
    base == 4.*, directory, filepath, network, mtl, bytestring >= 0.10,
    data-accessor, containers >= 0.5,
    protocol-buffers, protocol-buffers-descriptor,
    cryptohash,
    monad-peel,
    resourcet, conduit, network-conduit,
    conduit-network-stream,
    rolling-hash

  Exposed-modules:
    Sync
    Sync.Hashing
    Sync.IO
    Sync.Protocol
    Sync.Protocol.Internal
    Sync.Exceptions
  Other-modules:
